添加预览图片轮播效果

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-/ordering-app/HowToCook
-/ordering-app/img/*
-/ordering-app/js/data.js
+ordering-app/HowToCook
+ordering-app/img/*
+ordering-app/js/data.js
+data.js.backup*
